Fix navigation overflow.

--- a/src/pallets_sphinx_themes/themes/pocoo/static/pocoo.css
+++ b/src/pallets_sphinx_themes/themes/pocoo/static/pocoo.css
@@ -439,6 +439,12 @@ table.footnote td {
     padding: 0 20px;
     background-color: #333;
     color: #ccc;
+    overflow: hidden;
+  }
+
+  div.sphinxsidebar:hover {
+    width: max-content;
+    background: white;
   }
 
   div.sphinxsidebar a,
